--- a/main.html
+++ b/main.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table style="width: 100%; height: 100%" border="2px">
       <!-- Your code here -->
-		<table border="2px">
 			<tr>
 				<td>
 					<table>
